# ticketing

./: .dockerignore  .env  .env.sample  .gitignore  Cargo.toml  Dockerfile  Dockerfile.frontend  README.md  bacon.toml  dev.sqlite  docker-compose.yml  generate-secrets.sh  kind-cluster-config.win.yml  kind-cluster-config.yml  sqlx-data.json  stack.yml  start.ps1  start.sh
.github/workflows/: audit.yml  docker.yml  general.yml
backend/: Cargo.toml
backend/src/: api.rs  lib.rs  scheduler.rs
backend/src/api/: auth_backend.rs  auth_utils.rs  comments_resource.rs  config.rs  consts.rs  error.rs  jwt.rs  login_controller.rs  search.rs  tickets_resource.rs  users_resource.rs  validated_json.rs
backend/src/api/filters/: mod.rs
backend/src/api/query/: helper.rs  mod.rs  ordering.rs  redirect.rs
backend/src/api/query/filters/: mod.rs  pagination.rs  search.rs  ticket_filter.rs
backend/src/api/resources/: comments_resource.rs  mod.rs  preferences_resource.rs  projects_resource.rs  ticket_attachments_resource.rs  ticket_updates_resource.rs  tickets_resource.rs  users_resource.rs
backend/src/api/services/: mod.rs  notification_service.rs  preferences_service.rs
backend/src/api/tasks/: mod.rs  queue_mailer.rs
backend/src/api/template_models/: login_model.rs  mfa_email_model.rs  mod.rs
backend/templates/: login.html  mfa_email.html
backend/tests/: api_test.rs
backend/tests/common/: mod.rs
dev/: docker-compose.yml
dev/lighttpd/: lighttpd.conf
dev/prometheus/: prometheus.yml
entity/: Cargo.toml
entity/src/: comments.rs  lib.rs  preferences.rs  prelude.rs  projects.rs  sea_orm_active_enums.rs  ticket.rs  ticket_attachments.rs  ticket_updates.rs  tickets.rs  users.rs
extra_migrations/: README.md
extra_migrations/mariadb/: init.sql
extra_migrations/postgres/: init.sh
frontend/: Cargo.toml  Trunk.toml  index.html  index.scss  lighttpd.conf
frontend/assets/bulma/themes/cerulean/: _overrides.scss
frontend/assets/bulma/themes/cyborg/: _overrides.scss
frontend/assets/bulma/themes/default/: _variables.scss
frontend/assets/bulma/themes/simplex/: _overrides.scss  _variables.scss
frontend/assets/bulma/themes/slate/: _overrides.scss
frontend/assets/bulma/themes/solar/: _overrides.scss
frontend/src/: app_state.rs  authenticator.rs  dialog.rs  lib.rs  main.rs  route.rs  theming.rs
frontend/src/api/: project.rs  ticket.rs  user.rs
frontend/src/components/: app_modal.rs  button_link.rs  check_tag.rs  component_helper.rs  consts.rs  event_helper.rs  icon_link.rs  mod.rs  navbar.rs  option_data.rs  priority_tag.rs  project_card.rs  registration_form.rs  select_dialog.rs  text_input.rs  theme_icon.rs  theme_switcher.rs  unassigned_tickets_dialog.rs  user_card.rs  user_link.rs
frontend/src/components/bulma/: field.rs  mod.rs  pagination.rs  table.rs
frontend/src/components/bulma/tables/: composite_cell_data.rs  mod.rs  table.rs  table_cell_renderer_trait.rs  table_data_source.rs  table_head.rs  table_head_data.rs  table_head_renderer.rs  table_head_sort.rs  table_head_sort_manager.rs  table_head_sort_order.rs  table_header.rs  table_header_renderer.rs
frontend/src/components/bulma/tables/cell_renderers/: mod.rs  simple_cell_renderer.rs
frontend/src/components/bulma/tables/data_sources/: data_source_creator.rs  mod.rs  project_data_source.rs  ticket_data_source.rs  user_data_source.rs
frontend/src/components/dialogs/: dialog_context.rs  form_dialog.rs  mod.rs  select_dialog.rs
frontend/src/components/forms/: login_form.rs  mod.rs  preferences_form.rs  project_form.rs  registration_form.rs  ticket_form.rs
frontend/src/components/html/: checkbox.rs  date_input.rs  mod.rs  select.rs  text_input.rs
frontend/src/helpers/: component_helper.rs  event_helper.rs  mod.rs  storage_helper.rs
frontend/src/pages/: home.rs  home_page.rs  login_page.rs  mod.rs  page_not_found.rs  project.rs  project_board_page.rs  project_list.rs  project_list_page.rs  project_new.rs  project_new_page.rs  project_page.rs  registration.rs  registration_page.rs  ticket.rs  ticket_new.rs  ticket_new_page.rs  ticket_page.rs  user.rs  user_list.rs  user_list_page.rs  user_page.rs
frontend/src/services/: auth_service.rs  mod.rs  project_service.rs  ticket_service.rs  user_service.rs
frontend/tests/: node.rs  web.rs
frontend/tests/common/: mod.rs
k8s/: backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  jwt-secret-secret.yaml.sample  mailhog-deployment.yaml  mailhog-service.yaml  mariadb-claim1-persistentvolumeclaim.yaml  mariadb-data-persistentvolumeclaim.yaml  mariadb-deployment.yaml  mariadb-init-persistentvolumeclaim.yaml  mariadb-password-secret.yaml.sample  mariadb-root-password-secret.yaml.sample  mariadb-service.yaml  postgres-claim1-persistentvolumeclaim.yaml  postgres-data-persistentvolumeclaim.yaml  postgres-deployment.yaml  postgres-init-persistentvolumeclaim.yaml  postgres-password-secret.yaml.sample  postgres-service.yaml  redis-data-persistentvolumeclaim.yaml  redis-deployment.yaml  redis-service.yaml  smtp-password-secret.yaml.sample  ticketing-mariadb-persistentvolumeclaim.yaml  ticketing-postgres-persistentvolumeclaim.yaml  ticketing-redis-persistentvolumeclaim.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230626_000001_drop_table.rs  m20230627_000001_create_user_table.rs  (+16 more)
migrations/: 20230605080248_tickets.sql
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/api/: auth.rs  error_response.rs  helper.rs  mod.rs
shared/src/api/error/: error_detail.rs  error_response.rs  mod.rs  property_error.rs
shared/src/dtos/: field_index_trait.rs  getter.rs  identity.rs  login_dto.rs  mod.rs  page.rs  preferences_dto.rs  project.rs  project_dto.rs  ticket.rs  ticket_dto.rs  user.rs  user_dto.rs
shared/src/validation/: error_messages.rs  is_empty.rs  mod.rs  project.rs  project_validation.rs  ticket_validation.rs  user.rs  user_validation.rs  validation_messages.rs
src/: api.rs  main.rs
tests/: bdd_test.rs  integration_test.rs  playwright_test.rs
(+13 files in other folders)
