[package]
name = "ticketing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
# Add "frontend" for local cargo builds, keep it commented out for Docker builds:
members = [".", "backend", "entity", "migration", "shared"] # , "frontend"]

[dependencies]
# Modules
backend = { path = "backend" }
entity = { path = "entity" }
# frontend = { path = "frontend" }
migration = { path = "migration" }
shared = { path = "shared" }
# Core dependencies
tokio = { version = "1.43", features = ["full"] }

[dev-dependencies]
cucumber = "0.21"
futures = "0.3"
playwright = "0.0.20"
reqwest = "0.12"
thirtyfour = "0.35"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread", "time"] }

[[test]]
name = "bdd_test"
harness = false
