[package]
name = "backend"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
name = "backend"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
askama = "0.12.1"
askama_axum = "0.4"
async-trait = "0.1"
axum = { version = "0.7", features = [ "query", "macros" ] }
axum_csrf = { version = "0.9", features = [ "layer" ] }
axum-extra = { version = "0.9", features = [ "cookie" ] }
axum-login = "0.12"
base64 = "0.21"
chrono = { version = "0.4", default-features = false }
dotenvy = "0.15"
entity = { path = "../entity" }
futures = "0.3.27"
http = "1.0"
http-body = "1.0"
hyper = "1"
jsonwebtoken = "9"
lazy_static = "1.4"
log = "0.4"
migration = { path = "../migration" }
mime = "0.3"
redis = { version = "0.24", features = [ "tokio-comp" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0"
serde_valid = "0.16"
shared = { path = "../shared" }
strum = "0.25"
thiserror = "1.0"
tokio = { version = "1.28", features = [ "full" ] }
tower-http = { version = "0.5", features = [ "cors" ] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.7", features = [ "v4" ] }

[dependencies.sea-orm]
version = "0.12"
features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros", "with-chrono" ]

[dev-dependencies]
sea-orm = { version = "0.12", features = [ "sqlx-sqlite" ] }
