[package]
name = "backend"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
name = "backend"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
askama = { version = "0.14" }
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "query"] }
axum_csrf = { version = "0.11", features = ["layer"] }
axum_typed_multipart = "0.16"
axum-extra = { version = "0.12", features = ["cookie", "with-rejection"] }
axum-login = "0.18"
base64 = "0.22"
chrono = { version = "0.4", default-features = false }
dotenvy = "0.15"
entity = { path = "../entity" }
fang = { version = "0.10", features = [
    "asynk",
    "derive-error",
], default-features = false }
futures = "0.3.27"
http = "1.0"
jsonwebtoken = "9"
lazy_static = "1.4"
lettre = "0.11"
migration = { path = "../migration" }
mime = "0.3"
object_store = { version = "0.11", features = ["aws"] }
redis = { version = "0.32", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_valid = "1.0"
serde-email = { version = "3.0", features = ["sea-orm"] }
shared = { path = "../shared" }
strum = "0.26"
strum_macros = "0.26"
tempfile = "3.8"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tower-sessions = { version = "0.14", features = ["memory-store"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.13", features = ["v4"] }

[dependencies.sea-orm]
version = "1.1"
features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "with-chrono"]

[dev-dependencies]
sea-orm = { version = "1.1", features = ["sqlx-sqlite"] }
