[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "frontend"
path = "src/lib.rs"

[dependencies]
base64 = "0.21"
chrono = { version = "0.4", default-features = false, features = [ "serde" ] }
entity = { path = "../entity" }
gloo = "0.10"
gloo-net = "0.4"
gloo-timers = "0.3"
implicit-clone = "0.4"
instant = { version = "0.1", features = ["wasm-bindgen"] }
log = "0.4"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0"
serde_valid = "0.16"
shared = { path = "../shared" }
strum = "0.25"
wasm-bindgen = { version = "0.2" }
wasm-logger = "0.2"
yew-router = "0.18"

[dependencies.yew]
version = "0.21"
features = ["csr"]

[dependencies.web-sys]
version = "0.3"
features = [ "DataTransfer", "Document", "DomStringMap", "DragEvent", "Element", "Event", "EventTarget", "HtmlCollection", "HtmlDivElement", "HtmlSelectElement", "InputEvent", "MouseEvent", "Window" ]

[dev-dependencies]
gloo-utils = "0.2"
js-sys = "0.3"
wasm-bindgen-test = "0.3"
