[package]
name = "frontend"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
name = "frontend"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
entity = { path = "../entity" }
gloo-net = "0.6"
gloo-timers = "0.3"
gloo-utils = "0.2"
implicit-clone = "0.4"
log = "0.4"
serde_json = "1.0"
serde_valid = "2.0"
serde-email = { version = "3.1", features = ["sea-orm"] }
shared = { path = "../shared" }
strum = { version = "0.27", features = ["derive"] }
uuid = { version = "1.13", features = ["v4", "js"] }
wasm-bindgen = { version = "0.2.106" }
wasm-logger = "0.2"
web-time = "1.0"
yew-router = "0.18"

[dependencies.yew]
version = "0.21"
features = ["csr"]

[dependencies.web-sys]
version = "0.3"
features = [
    "Blob",
    "DataTransfer",
    "Document",
    "DomStringMap",
    "DragEvent",
    "Element",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FormData",
    "HtmlCollection",
    "HtmlDivElement",
    "HtmlSelectElement",
    "InputEvent",
    "MouseEvent",
    "Storage",
    "Window",
]

[dev-dependencies]
gloo-utils = "0.2"
wasm-bindgen-test = "0.3"
