[package]
name = "shared"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
name = "shared"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = [ "serde" ] }
entity = { path = "../entity" }
implicit-clone = "0.4"
regex = "1.9"
serde = { version = "1", features = [ "derive" ] }
serde_valid = "0.16"
serde_with = "3.1"
serde-email = { version = "3.0", features = [ "sea-orm" ] }
strum = { version = "0.25", features = [ "derive" ] }
