[package]
name = "shared"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
name = "shared"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde"] }
entity = { path = "../entity" }
implicit-clone = "0.4"
log = "0.4"
sea-orm = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_valid = "2.0"
serde-email = { version = "3.0", features = ["sea-orm"] }
strum = { version = "0.27", features = ["derive"] }
uuid = "1.13"
